--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -245,42 +245,39 @@ h6 {
   line-height:1em;
 }
 
-.get-started-group{
+ .get-started-group{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff;
-    padding: 3px 10px 4px 10px;
+    padding: 3px 6px 4px 6px;
 }
 
-.get-started-buttons a{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+ .navbar .get-started-buttons a{
+
     border-right: 2px solid #ffc451;
 
 }
 
-.get-started-group i{
+.get-started-buttons .get-started-group i{
     padding: 3px 15px 4px 15px;
     font-size: 24px;
 }
 
-.get-started-buttons{
+/* .get-started-buttons{
     display: flex;
     flex-direction: row;
-    /* padding: 12px 15px 9px 15px; */
+
     justify-content: center;
     justify-items: center;
+    margin-left: 40px;
+} */
+
+.navbar .get-started-buttons :nth-child(1) a{
+    font-size: 14px !important;
 }
 
-.get-started-buttons  :nth-child(1) a{
-    font-size: 14px;
-}
-
-.get-started-buttons  :nth-child(2) a{
+.navbar .get-started-buttons :nth-child(2) a{
     font-size: 12px;
 }
 
@@ -291,7 +288,7 @@ h6 {
 
 }  */
 
-.get-started-buttons  :nth-child(3){
+.navbar .get-started-buttons  :nth-child(3){
     border-right: none;
 }
 
@@ -309,10 +306,41 @@ h6 {
   color: #343a40 !important;
 }
 
+@media (min-width: 992px) {
+
+    .get-started-btn {
+        color: #fff;
+
+     }
+    .get-started-group{
+
+        color: #fff;
+        padding: 3px 10px 4px 10px;
+    }
+
+    .get-started-buttons{
+        display: flex;
+        flex-direction: row;
+        /* padding: 12px 15px 9px 15px; */
+        justify-content: center;
+        justify-items: center;
+        margin-left: 40px;
+    }
+
+    .navbar .get-started-buttons a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+    }
+}
+
 @media (max-width: 992px) {
   .get-started-btn {
-    padding: 7px 20px 8px 20px;
-    margin-right: 15px;
+    padding: 7px 10px 8px 10px;
+
   }
 }
 
@@ -338,21 +366,24 @@ h6 {
   position: relative;
 }
 
-.navbar a,
-.navbar a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 10px 30px;
-  font-size: 14px;
-  font-weight: 400;
-  color: #fff;
-  white-space: nowrap;
-  transition: 0.3s;
+@media (min-width: 992px) {
+    .navbar li a,
+    .navbar li a:focus {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 0 10px 30px;
+      font-size: 14px;
+      font-weight: 400;
+      color: #fff;
+      white-space: nowrap;
+      transition: 0.3s;
+    }
 }
 
-.navbar a i,
-.navbar a:focus i {
+
+.navbar li a i,
+.navbar li a:focus i {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
@@ -805,6 +836,10 @@ h6 {
     width: 100%;
 }
 
+#tramites .container .row .item-tramite{
+    border-bottom: 1px solid #eee;
+    margin-top: 15px;
+}
 
 /*--------------------------------------------------------------
 # RECLAMOS (como section hero)
@@ -1149,6 +1184,7 @@ section {
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 20px;
+  color: rgb(13, 116, 189);
 }
 
 .services .services-sm .icon-box h4 {
@@ -1886,14 +1922,6 @@ section #cultura-eventos {
     justify-content: center;
 }
 
-
-
-#seccion-gral .delegaciones div:hover{
-    background-color: #f4bf0000;
- }
-
-
-
 /*--------------------------------------------------------------
 # NOTICIAS utilizo team
 --------------------------------------------------------------*/
@@ -2603,7 +2631,7 @@ input[type=number] { -moz-appearance:textfield; }
 --------------------------------------------------------------*/
 
 .portada-foto{
-    height: 350px;
+    height: 320px;
     width: 100%;
     background-size: cover;
     align-items: end;
@@ -2617,11 +2645,17 @@ input[type=number] { -moz-appearance:textfield; }
     /* background: linear-gradient(#d634528b, #d634528b); */
 
     width: 100%;
-    height: 350px;
+    height: 320px;
     top: 0;
 }
 
 /*# color de blur segun cada seccion  */
+
+#generales .background-portada{
+background-image: url("../img/sections-portadas/tsas2.jpg");
+background-size: cover;
+}
+
 
 #cultura  .background-portada{
     background: linear-gradient(#67248366, #67248392);
@@ -2629,7 +2663,7 @@ input[type=number] { -moz-appearance:textfield; }
 
 #delegaciones  .background-portada{
     /* background: linear-gradient(#d634528b, #d634528b); */
-    background: linear-gradient(#ecdb3f66, #ecdb3f66);
+    background: linear-gradient(#f4bf0031, #f4bf0031);
 }
 /*fin color blur*/
 
@@ -2654,10 +2688,11 @@ input[type=number] { -moz-appearance:textfield; }
     position: absolute;
     z-index: 4;
     top: 200px;
-    padding: 40px;
+    padding: 30px 100px;
     color: #fff;
     font-weight: 700;
     text-shadow: 10px 10px 30px rgb(0, 0, 0);
+    text-transform: uppercase;
 }
 
 .container-border{
