--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,6 +18,7 @@ colores{
     color: #aaaaaa;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    color:#999999;
 
 
       /* NEGROS */
@@ -82,9 +83,26 @@ body {
   color: #444444;
 }
 
+.font-detail{
+    font-size: 14px;
+}
+
+.font-detail-minimalist{
+    font-size: 12px;
+    color: #999999;
+}
+
 a {
   color: #ffc451;
   text-decoration: none;
+}
+
+.a-blue{
+    color: rgb(13, 116, 189);
+}
+
+.a-blue:hover{
+    color: rgb(89, 152, 197);
 }
 
 a:hover {
@@ -2973,54 +2991,54 @@ background-size: cover;
 }
 
 .team .card-icono .member-1 i{
-    color: #d63384;
-}
-
-.team .card-icono .member-1 .card-ver-mas a{
-    background-color: #d63384;
-}
-
-.team .card-icono .member-1 .card-ver-mas a:hover{
-    background-color: #e64394 ;
-    color: #fff;
-}
-
-.team .card-icono .member-2 i{
     color: #3aaa35;
 }
 
-.team .card-icono .member-2 .card-ver-mas a{
+.team .card-icono .member-1 .card-ver-mas a{
     background-color: #3aaa35;
 }
 
-.team .card-icono .member-2 .card-ver-mas a:hover{
+.team .card-icono .member-1 .card-ver-mas a:hover{
     background-color: #53c04d ;
     color: #fff;
 }
 
+.team .card-icono .member-2 i{
+    color: #f4c000;
+}
+
+.team .card-icono .member-2 .card-ver-mas a{
+    background-color: #f4c000;
+}
+
+.team .card-icono .member-2 .card-ver-mas a:hover{
+    background-color: #ffd53f ;
+    color: #fff;
+}
+
 .team .card-icono .member-3 i{
-    color: #004f9f;
+    color: #f07e07;
 }
 
 .team .card-icono .member-3 .card-ver-mas a{
-    background-color: #004f9f;
+    background-color: #f07e07;
 }
 
 .team .card-icono .member-3 .card-ver-mas a:hover{
-    background-color: #2464a3 ;
+    background-color: #ea8f2e ;
     color: #fff;
 }
 
 .team .card-icono .member-4 i{
-    color: #f07e07;
+    color: #d63384;
 }
 
 .team .card-icono .member-4 .card-ver-mas a{
-    background-color: #f07e07;
+    background-color: #d63384;
 }
 
 .team .card-icono .member-4 .card-ver-mas a:hover{
-    background-color: #ea8f2e ;
+    background-color: #e64394 ;
     color: #fff;
 }
 
@@ -3039,15 +3057,15 @@ background-size: cover;
 
 
 .team .card-icono .member-6 i{
-    color: #f4c000;
+    color: #004f9f;
 }
 
 .team .card-icono .member-6 .card-ver-mas a{
-    background-color: #f4c000;
+    background-color: #004f9f;
 }
 
 .team .card-icono .member-6 .card-ver-mas a:hover{
-    background-color: #ffd53f ;
+    background-color: #2464a3 ;
     color: #fff;
 }
 
