--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -615,16 +615,27 @@ h6 {
 
 @media (max-width: 991px) {
     #hero {
-        width: 100%;
+         width: 100%;
         height: 250px;
+    }
+
+    #hero #video{
+        position: absolute;
+        z-index: 0;
+        width: 100%;
     }
 }
 
-#hero #video{
-    position: absolute;
-    z-index: 0;
-    width: 100%;
+
+@media (min-width: 991px) {
+    #hero #video{
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+    }
 }
+
+
 
 #hero:before {
   content: "";
@@ -833,7 +844,7 @@ h6 {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
   #hero {
     max-height: 250px;
     height: auto;
@@ -1271,9 +1282,10 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/generals/wolrd-digital.jpg") fixed center center;
+  /* background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/generals/blue.png") fixed center center; */
   /* background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sections/geom-2.jpg") fixed center center; */
-  /* background:url("../img/sections/fondo.jpg") fixed center center; */
+   /* background:url("../img/generals/blue.png") fixed center center; */
+background-color: #004f9f;
   background-size: cover;
   padding: 60px 0;
 }
@@ -2011,11 +2023,20 @@ section #deportes-eventos{
 #noticias  .aside-principal{
     padding-right: 20px;
 }
-
-#noticias .aside-lateral{
-    border-left: 1px solid whitesmoke;
-    padding-left: 20px;
+@media (max-width: 992px) {
+    #noticias .aside-lateral{
+        border-left: none;
+    }
 }
+
+@media  (min-width: 992px) {
+    #noticias .aside-lateral{
+        border-left: 1px solid whitesmoke;
+        padding-left: 20px;
+    }
+}
+
+
 
 #noticias .aside-lateral .section-title{
    padding-bottom: 0px;
