--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,10 +32,11 @@ colores{
     background: rgba(13, 116, 189, 0.8);
     /*hover*/ color: rgb(89, 152, 197);
 
+    color: rgb(1,255,255);
 
     /* AMARILLOS */
     color: #ffd584;
-    color: #ffc451;
+    color:  #ffc451; /*reemplazo*/
     background: #ffbb38;
 
     /* VERDE */
@@ -94,7 +95,7 @@ body {
 }
 
 a {
-  color: #ffc451;
+  color: rgb(1,255,255);
   text-decoration: none;
 }
 
@@ -130,7 +131,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ffc451;
+  background: rgb(1,255,255);
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -148,7 +149,7 @@ h6 {
 }
 
 .back-to-top:hover i {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 .back-to-top.active {
@@ -175,7 +176,7 @@ h6 {
   position: fixed;
   top: calc(50% - 0px);
   left: calc(50% - 30px);
-  border: 6px solid #ffc451;
+  border: 6px solid rgb(1,255,255);
   border-top-color: rgb(13, 116, 189);
   border-bottom-color: rgb(13, 116, 189);
   border-radius: 50%;
@@ -238,7 +239,7 @@ h6 {
 } */
 
 #header .logo a span {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 #header .logo img {
@@ -279,7 +280,7 @@ h6 {
 
  .navbar .get-started-buttons a{
 
-    border-right: 2px solid #ffc451;
+    border-right: 2px solid rgb(1,255,255);
 
 }
 
@@ -423,7 +424,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 .navbar .dropdown ul {
@@ -460,7 +461,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
 }
 
 .navbar .dropdown:hover>ul {
@@ -564,7 +565,7 @@ h6 {
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
   color: rgb(13, 116, 189);
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
 }
 
 .navbar-mobile .getstarted,
@@ -600,7 +601,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -672,13 +673,13 @@ h6 {
   font-size: 56px;
   font-weight: 700;
   line-height: 64px;
-  /* color: #ffc451; */
+  /* color: rgb(1,255,255); */
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
 
 #hero h1 span {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 #hero h2 {
@@ -784,7 +785,7 @@ h6 {
 /* ----------------------  CARDS SIN FONDO  ----------------------- */
 
 /* #hero .icon-1 i, #hero .icon-1 a{
-  color: #ffc451;
+  color: rgb(1,255,255);
 } */
 
 /* #hero .icon-2 i {
@@ -814,11 +815,11 @@ h6 {
 }
 /*
 #hero .icon-box h3 a:hover {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 #hero .icon-box:hover {
-  border-color: #ffc451;
+  border-color: rgb(1,255,255);
 }
 
 #hero .icon-2 h3 a:hover {
@@ -965,7 +966,7 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 .about .content p:last-child {
@@ -1004,7 +1005,7 @@ section {
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
 }
 
 /*--------------------------------------------------------------
@@ -1027,7 +1028,7 @@ section {
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 .features .icon-box p {
@@ -1107,7 +1108,7 @@ section {
 }
 
 .ver-mas-box a:hover {
-    background: #ffc451;
+    background: rgb(1,255,255);
     color: #ffffff;
 }
 
@@ -1195,7 +1196,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  /* background: #ffc451; */
+  /* background: rgb(1,255,255); */
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -1324,8 +1325,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #ffc451;
-  border-color: #ffc451;
+  background: rgb(1,255,255);
+  border-color: rgb(1,255,255);
   color: rgb(13, 116, 189);
 }
 
@@ -1360,7 +1361,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: rgb(13, 116, 189);
-  background: #ffc451;
+  background: rgb(1,255,255);
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1437,7 +1438,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -1473,11 +1474,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ffc451;
+  border: 1px solid rgb(1,255,255);
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
 }
 
 .portfolio-details .portfolio-info {
@@ -1542,7 +1543,7 @@ section {
 .counts .content .count-box i {
   display: block;
   font-size: 36px;
-  color: #ffc451;
+  color: rgb(1,255,255);
   float: left;
 }
 
@@ -1692,7 +1693,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: rgb(1,255,255);
   opacity: 1;
 }
 
@@ -1756,7 +1757,7 @@ section {
 
 .team .member .social a:hover {
   color: rgb(13, 116, 189);
-  background: #ffc451;
+  background: rgb(1,255,255);
 }
 
 .team .member .social i {
@@ -2198,7 +2199,7 @@ section #deportes-eventos{
 
 .contact .info i {
   font-size: 20px;
-  background: #ffc451;
+  background: rgb(1,255,255);
   color: rgb(13, 116, 189);
   float: left;
   width: 44px;
@@ -2291,7 +2292,7 @@ section #deportes-eventos{
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #ffc451;
+  border-color: rgb(1,255,255);
 }
 
 .contact .php-email-form input {
@@ -2303,7 +2304,7 @@ section #deportes-eventos{
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #ffc451;
+  background: rgb(1,255,255);
   border: 0;
   padding: 10px 24px;
   color: rgb(13, 116, 189);
@@ -2457,7 +2458,7 @@ section #deportes-eventos{
 }
 
 #footer .footer-top .footer-info h3 span {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 #footer .footer-top .footer-info p {
@@ -2484,7 +2485,7 @@ section #deportes-eventos{
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #ffc451;
+  background: rgb(1,255,255);
   color: rgb(13, 116, 189);
   text-decoration: none;
 }
@@ -2509,7 +2510,7 @@ section #deportes-eventos{
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ffc451;
+  color: rgb(1,255,255);
   font-size: 18px;
   line-height: 1;
 }
@@ -2532,7 +2533,7 @@ section #deportes-eventos{
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #ffc451;
+  color: rgb(1,255,255);
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -2558,7 +2559,7 @@ section #deportes-eventos{
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ffc451;
+  background: rgb(1,255,255);
   color: rgb(13, 116, 189);
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -2594,7 +2595,7 @@ section #deportes-eventos{
 }
 
 .register-button {
-  background: #ffc451;
+  background: rgb(1,255,255);
   border: 0;
   padding: 10px 24px;
   color: #fff;
