--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1219,6 +1219,12 @@ section {
   color: #25afc3;
 }
 
+.features .icon-box img {
+    width: 48px;
+    float: left;
+    /* color: #25afc3; */
+}
+
 .features .icon-box p {
   font-size: 15px;
   color: #848484;
@@ -3297,7 +3303,23 @@ background-size: cover;
 }
 
 
+/*--------------------------------------------------------------
+# PORTADAS para secciones internas
+--------------------------------------------------------------*/
+#colectividades .portada-foto{
+    background-image: url("/storage/secciones/port.jpg");
+   /* background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sections-portadas/portadas/municipio.jpg") fixed center center; */
+   height: 320px;
+   background-size: cover;
+}
 
+#cce .portada-foto{
+    background-image: url("../img/sections-portadas/cultura/cce.jpeg");
+   /* background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sections-portadas/portadas/municipio.jpg") fixed center center; */
+   height: 320px;
+   background-position: center;
+   background-size: cover;
+}
 
 /*--------------------------------------------------------------
 # MUNICIPIO / TRES ARROYOS
@@ -3582,3 +3604,15 @@ background-size: cover;
 }
 
 
+.video-lg iframe{
+    width: 100%;
+    height: 80%;
+}
+
+@media (max-width: 991px) {
+
+.video-lg iframe{
+    width: 100%;
+    height: 40%;
+}
+}
