Agrego seccion Deportes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1161,6 +1161,12 @@ section {
   margin-bottom: 0;
 }
 
+.content-box{
+    padding: 20px;
+    box-shadow: 0 0 9px rgba(0, 0, 0, .1);
+    margin: 20px;
+    width: 100%;
+}
 /*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
@@ -1258,14 +1264,14 @@ section {
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 420px;
+        /* min-height: 420px; */
         position: relative;
-        padding-right: 20px;
+        /* padding-right: 20px; */
     }
 
     .novedades .image-1{
-        width: 95%;
-        height: 420px;
+        /* width: 95%; */
+        /* height: 420px; */
         padding: 0px;
     }
 
@@ -1278,7 +1284,7 @@ section {
         bottom: 10px;
         background: rgba(0, 0, 0, 0.6);
         color: #ebebeb;
-        width: 95%;
+        /* width: 95%; */
         height: auto;
         border-radius: 0px 0px 10px 10px;
     }
@@ -1343,11 +1349,11 @@ section {
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 991px) {
-    .novedades .image-1{
+    /* .novedades .image-1{
         width: 95%;
         height: 354px;
         padding: 0px;
-    }
+    } */
 
     .novedad-1{
         top: 60%;
@@ -1363,10 +1369,10 @@ section {
         font-size: 18px;
     }
 
-    .novedades .image-2-box img{
+    /* .novedades .image-2-box img{
         width: 100%;
         height: 100%;
-    }
+    } */
 }
 
 
@@ -1446,7 +1452,7 @@ section {
 
 #deportes-eventos .container .row .member .member-img img{
     width:100% ;
-     height: 320px;
+     height: 420px;
    object-fit: cover;
 }
 
@@ -2011,7 +2017,8 @@ section {
   overflow: hidden;
   border-radius: 5px;
   background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 0 9px rgba(0, 0, 0, .1);
 }
 
 .team .member .member-img {
@@ -2117,10 +2124,13 @@ section {
 /*--------------------------------------------------------------
 # CULTURA / EVENTOS (reutilizo estilo MUSEOS - Team)
 --------------------------------------------------------------*/
-section #cultura-eventos p{
+section #cultura-eventos{
     /* background-color: #d63384bb; */
-    /* background-color: whitesmoke; */
-    color: #662483;
+    background-color: #f7f7f7;
+
+}
+
+section #cultura-eventos p{
     color: #d63384;
 }
 
@@ -2225,7 +2235,7 @@ section #deportes-eventos{
     filter:none;
     padding-bottom: 0px;
 /* border-bottom: 1px solid #FFF; */
-    background-color: rgba(0, 0, 0, 0.300);
+    background-color: rgba(0, 0, 0, 0.400);
     padding: 10px;
     box-shadow: 1px 1px 2px  rgba(0, 0, 0, 0.150);;
 
@@ -3615,8 +3625,132 @@ background-size: cover;
 
 @media (max-width: 991px) {
 
-.video-lg iframe{
+    .video-lg iframe{
+        width: 100%;
+        height: 40%;
+    }
+}
+
+
+
+/*--------------------------------------------------------------
+# SWIPER CAROUSEL
+--------------------------------------------------------------*/
+.container-image-2, .container-image-1{
+   height: 480px;
+}
+
+.swiper-noticia{
+    height: 420px;
+}
+
+.swiper-evento{
+    height: 480px;
+    border: 1px solid rgba(167, 167, 167, 0.585);
+    border-radius: 10px;
+}
+
+.swiper {
     width: 100%;
-    height: 40%;
+    /* height: 100%; */
+    /* padding: 20px; */
+
+    box-shadow: 4px 4px 4px rgba(122, 130, 150, 0.307);
 }
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+  /* .swiper-button-next, .swiper-button-prev{
+    padding: 40px;
+  } */
+
+  .autoplay-progress {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: var(--swiper-theme-color);
+  }
+
+  .autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--swiper-theme-color);
+    fill: none;
+    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
+  }
+/*swiper con texto*/
+.parallax-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/sections-portadas/cultura/cce.jpeg');
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .swiper-slide .title {
+    font-size: 41px;
+    font-weight: 300;
+  }
+
+  .swiper-slide .subtitle {
+    font-size: 21px;
+    position: absolute;
+    bottom: 0px;
+    background: rgba(0, 0, 0, 0.6);
+    height: auto;
+     padding: 20px;
+  }
+
+  .swiper-slide .subtitle a{
+     /* color: #34c9e0; */
+     /* color: #57e1f6; */
+    color: #ffffff;
+  }
+
+.swiper-slide .subtitle a:hover{
+     color: #34c9e0;
+    /* color: #57e1f6; */
+}
+
+  .swiper-slide .text {
+    font-size: 14px;
+    max-width: 400px;
+    line-height: 1.3;
+  }
+
+  .autoplay-progress{
+    display: none;
+  }
