--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -288,7 +288,7 @@ h6 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3px 6px 4px 6px;
+    /* padding: 3px 6px 4px 6px; */
 }
 
  .navbar .get-started-buttons a{
@@ -304,7 +304,7 @@ h6 {
 
 .get-started-buttons .get-started-group img{
     /* padding: 3px 3px 4px 3px; */
-    width: 46px;
+    width: 56px;
 
 }
 
@@ -382,10 +382,9 @@ h6 {
 }
 
 @media (max-width: 992px) {
-  .get-started-btn {
-    padding: 7px 10px 8px 10px;
-
-  }
+    .get-started-btn {
+        padding: 7px 10px 8px 10px;
+    }
 }
 
 /*--------------------------------------------------------------
@@ -567,8 +566,8 @@ h6 {
   transition: 0.3s;
 }
 
-.navbar-mobile a,
-.navbar-mobile a:focus {
+.navbar-mobile li a,
+.navbar-mobile li a:focus {
   padding: 10px 20px;
   font-size: 15px;
   color: rgb(13, 116, 189);
@@ -577,7 +576,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: rgb(13, 116, 189);
+  color: #FFF;
   background-color: #25afc3;
 }
 
@@ -807,6 +806,7 @@ h6 {
         position: absolute;
         z-index: 0;
         width: 100%;
+
     }
 }
 
@@ -823,14 +823,16 @@ h6 {
 }
 
 #hero .container {
-  position: relative;
+  position: absolute;
   /* padding-top: 74px; */
   text-align: center;
-  margin-top: 152px; /*cards con fondo*/
+  margin-top: 292px;
+  top: -70px;
+  height: 100%;
 }
 
-#hero .row>*{
 
+#hero .row>*{
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -864,6 +866,10 @@ h6 {
   height: 100%;
   text-align: center;
 } */
+
+#hero .menu-home .icon-box{
+    padding: 30px 0px;
+}
 
 #hero .icon-box i {
   font-size: 32px;
@@ -1696,6 +1702,18 @@ section {
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin-bottom: 30px;
+
+}
+
+#portfolio-eventos .portfolio-item {
+    height: 326px;
+}
+
+
+
+#portfolio-eventos .portfolio-item img{
+    height: 326px;
+    width: 100%;
 }
 
 .portfolio #portfolio-flters {
@@ -3330,7 +3348,8 @@ background-size: cover;
 
 @media (max-width: 991px) {
     .portada-foto h1{
-        top: 100px;
+        bottom: 260px;
+        left: 15%;
         padding: 20px 50px;
     }
 }
@@ -3666,17 +3685,35 @@ background-size: cover;
 .modalimg{
     width: 100%;
 }
+@media (min-width: 991px) {
+    .font-color-wh{
+    color: #ffffff;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922);
+    }
 
-.font-color-wh{
-   color: #ffffff;
-   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922);
+    .font-color-bl{
+        color: #343434;
+        text-shadow: #f5f5f5;
+        /* text-shadow: 1px #010101; */
+    }
 }
 
-.font-color-bl{
-    color: #343434;
-    text-shadow: #f5f5f5;
-    /* text-shadow: 1px #010101; */
- }
+@media (max-width: 991px) {
+    .font-color-wh{
+        color: rgb(13, 116, 189);
+        /* text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.922); */
+    }
+
+    .font-color-bl{
+        color: rgb(13, 116, 189);
+
+        /* text-shadow: 1px #010101; */
+    }
+
+    .mobile-nav-toggle{
+        color: #FFF;;
+    }
+}
 
 .list-group-item{
     /* color: #25afc3; */
@@ -3735,13 +3772,13 @@ background-size: cover;
      height: 100%;
     /* padding: 20px; */
     border-radius: 5px;
-    box-shadow: 4px 4px 6px 4px rgba(132, 132, 132, 0.693);
+    box-shadow: 3px 3px 5px 3px rgba(162, 162, 162, 0.693);
 
     /* box-shadow: 4px 4px 4px rgba(122, 130, 150, 0.307); */
 }
 
 .swiper-noticia:hover{
-    box-shadow: 6px 6px 8px 6px rgba(120, 120, 120, 0.693)
+    box-shadow: 5px 5px 8px 5px rgba(132, 132, 132, 0.693);
 }
 
 .swiper-slide {
@@ -3762,9 +3799,9 @@ background-size: cover;
 
 }
 
-.swiper-slide img:hover {
+/* .swiper-slide img:hover {
     box-shadow: 6px 6px 8px 6px rgba(120, 120, 120, 0.693)
-}
+} */
 
   /* .swiper-button-next, .swiper-button-prev{
     padding: 40px;
@@ -3821,7 +3858,7 @@ background-size: cover;
     font-size: 21px;
     position: absolute;
     bottom: 0px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(233, 233, 233, 0.8);
     height: auto;
      padding: 20px;
      border-radius: 0px 0px 10px 5px;
@@ -3830,11 +3867,12 @@ background-size: cover;
   .swiper-slide .subtitle a{
      /* color: #34c9e0; */
      /* color: #57e1f6; */
-    color: #ffffff;
+    color: #000000;
+    text-shadow: 1px 1px 1px #dfdfdf99;;
   }
 
 .swiper-slide .subtitle a:hover{
-     color: #34c9e0;
+     color: rgb(13, 116, 189);
     /* color: #57e1f6; */
 }
 
@@ -3881,7 +3919,7 @@ background-size: cover;
 .today img{
     /* margin: 20px; */
     float: right;
-    box-shadow: 4px 4px 6px 4px rgba(132, 132, 132, 0.693);
+    box-shadow: 3px 3px 5px 3px rgba(162, 162, 162, 0.693);
     border-radius: 5px;
 }
 
